crates/pg_syntax/tests/snapshots/postgres_regress/horology@245.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_date('-44-02-01 BC','YYYY-MM-DD BC');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..14 "to_date"
      Ascii40@14..15 "("
      AConst@15..29
        Sconst@15..29 "'-44-02-01 BC'"
      Ascii44@29..30 ","
      AConst@30..45
        Sconst@30..45 "'YYYY-MM-DD BC'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

