crates/pg_syntax/tests/snapshots/postgres_regress/horology@247.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('-44-02-01 11:12:13','YYYY-MM-DD HH24:MI:SS');"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..64
    FuncCall@7..64
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..40
        Sconst@20..40 "'-44-02-01 11:12:13'"
      Ascii44@40..41 ","
      AConst@41..64
        Sconst@41..64 "'YYYY-MM-DD HH24:MI:SS'"
  Ascii41@64..65 ")"
  Ascii59@65..66 ";"

