crates/pg_syntax/tests/snapshots/postgres_regress/horology@248.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('-44-02-01 11:12:13 BC','YYYY-MM-DD HH24:MI:SS BC');"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..43
        Sconst@20..43 "'-44-02-01 11:12:13 BC'"
      Ascii44@43..44 ","
      AConst@44..70
        Sconst@44..70 "'YYYY-MM-DD HH24:MI:S ..."
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

