crates/pg_syntax/tests/snapshots/postgres_regress/horology@251.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2011-12-18   23:38:15', 'YYYY-MM-DD  HH24:MI:SS');"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..69
    FuncCall@7..69
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..43
        Sconst@20..43 "'2011-12-18   23:38:15'"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..69
        Sconst@45..69 "'YYYY-MM-DD  HH24:MI:SS'"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

