crates/pg_syntax/tests/snapshots/postgres_regress/horology@253.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2011-12-18  23:38:15', 'YYYY-MM-DD  HH24:MI:SS');"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..68
    FuncCall@7..68
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..42
        Sconst@20..42 "'2011-12-18  23:38:15'"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..68
        Sconst@44..68 "'YYYY-MM-DD  HH24:MI:SS'"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

