crates/pg_syntax/tests/snapshots/postgres_regress/horology@254.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2011-12-18  23:38:15', 'YYYY-MM-DD   HH24:MI:SS');"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..69
    FuncCall@7..69
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..42
        Sconst@20..42 "'2011-12-18  23:38:15'"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..69
        Sconst@44..69 "'YYYY-MM-DD   HH24:MI ..."
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

