crates/pg_syntax/tests/snapshots/postgres_regress/horology@255.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2000+   JUN', 'YYYY/MON');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..33
        Sconst@20..33 "'2000+   JUN'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..45
        Sconst@35..45 "'YYYY/MON'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

