crates/pg_syntax/tests/snapshots/postgres_regress/horology@258.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2000  +JUN', 'YYYY//MON');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..32
        Sconst@20..32 "'2000  +JUN'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..45
        Sconst@34..45 "'YYYY//MON'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

